# GodotExperiments

./: .gitignore  Cargo.toml  HelloWorld.gdns  Label.gd  Main.gd  Main.tscn  Node2DGodot.gd  plot_rand_range_distribution.py  project.godot  rnlib.gdnlib
3DTest1/: Main.tscn  material_1.tres  project.godot
AddManyChildNodes/: fps_label.gd  generator_v1.gd  generator_v2.gd  main.tscn
DivisionTest/: Control.gd
Godot4/CallSuperMethodGdscript/: LineEditCustom.gd  ScrollContainerCustom.gd  main.tscn  project.godot
Godot4/DebugBindPanicScrollBar/: main.tscn
Godot4/DebugMacroExpansion/: main.tscn
Godot4/Float64vs32TimingTest/: icon.svg.import
Godot4/GamepadTest/: main.gd  main.tscn  project.godot
Godot4/HelloWorld/: RustExtension.gdextension  control.gd  main.tscn  project.godot
Godot4/HelloWorld/rust/: Cargo.toml
Godot4/HelloWorld/rust/src/: ui.rs
Godot4/LineRenderingGodot/: .gitignore  ControlBenchmark.gd  ControlBenchmarkCustom.gd  benchmark.tscn  benchmark_custom.tscn  export_presets.cfg  icon.svg.import  project.godot
Godot4/LineRenderingRust/: RustExtension.gdextension
Godot4/PureRust/: RustExtension.gdextension  main.tscn
Godot4/PureRust/rust/: Cargo.toml
Godot4/PureRust/rust/src/: instantiation_order.rs  lib.rs  render_stats.rs  ui.rs  utils.rs
Godot4/RustAudioSplitSequencerPOC/: RustExtension.gdextension  main.tscn
Godot4/RustAudioSplitSequencerPOC/rust/: Cargo.toml
Godot4/RustAudioSplitSequencerPOC/rust/src/: atomic_float.rs  custom_audio_stream.rs  debug.rs  demo.rs  lib.rs  sequencer.rs
Godot4/RustAudioSplitSequencerPOC/rust/src/v1/: custom_audio_stream.rs  demo.rs  sequencer.rs
Godot4/RustAudioSplitSequencerPOC/rust/src/v2/: custom_audio_stream.rs  demo.rs  mod.rs  sequencer.rs
Godot4/RustCustomDrawing/: RustExtension.gdextension
Godot4/RustLowLevelAudio/: main.tscn
Godot4/RustLowLevelAudio/rust/: Cargo.toml  watch_build.sh
Godot4/RustLowLevelAudio/rust/src/: custom_audio_stream.rs  custom_audio_stream_v1.rs  custom_audio_stream_v2.rs  demo_v1.rs  demo_v2.rs  lib.rs
Godot4/RustReactiveUI/rust/: Cargo.toml
Godot4/RustReactiveUI/rust/benches/: my_benchmark.rs
Godot4/RustReactiveUI/rust/src/: experiment.rs  lib.rs  main.rs  reactive.rs
Godot4/RustViewportTest1/: main.tscn
Godot4/RustViewportTest1/rust/: Cargo.toml
Godot4/RustViewportTest1/rust/src/: render_stats.rs  ui.rs  utils.rs
Godot4/UiSkinning1/: font  main.tscn
Godot4/UiSkinning1/rust/: Cargo.toml
Godot4/UiSkinning1/rust/src/: ui.rs
Godot4/UseBaseInInit/rust/: Cargo.toml
Godot4/UseBaseInInit/rust/src/: lib.rs
Godot4/ViewportTest1/: DrawingNode2D.gd  main.tscn  project.godot
Godot4/_RustMinimal/: project.godot
Godot4/_RustMinimal/rust/: Cargo.toml
Godot4/_RustMinimal/rust/src/: lib.rs
Goplot/: .gitignore  Main.tscn  project.godot  setup.py
Goplot/goplot/: __init__.py  goplot.py
Goplot/resources/: default_env.tres  default_material.tres
Goplot/src/: Camera.gd  Control.gd  MeshInstance.gd
ImagemagickExperiments/: README.md
InvisibleNodeProcessing/: logger.gd  main.tscn  project.godot
LineDrawing2/: MeshInstance2D.gd  line_shader.gdshader  line_shader.tres  project.godot
MeshDrawCallsCheck/: Impl1.gd  Impl2.gd  Impl3.gd  main.tscn
MeshSetSurfaceCheck/: check1.gd  check2.gd  check3.gd  check4.gd  main.tscn  material_a.tres  material_b.tres  project.godot
NormalsCheck/: main.tscn  material.tres  project.godot
OffCenterCamera/: main.tscn  main_with_viewport.tscn
ProcessOrder/: main.tscn  process.gd  project.godot
ProgressBar/: CustomProgressBar.gd  CustomProgressBar.tscn  Main.gd  Main.tscn  progress_bar.png.import  progress_bar_bg.png.import  progress_bar_fg.png.import  project.godot
Resolution2D/: FPS.gd  Game.gd  Game.tscn  Resolution.gd  Resolution.gdshader  Resolution.png.import  Resolution.tscn  Spin.gd  city_public.jpg.import  export_presets.cfg  project.godot
Resolution2D/.import/: Resolution.png-d03b2178be256e69a2623868d10a4c06.md5  Resolution.png-d03b2178be256e69a2623868d10a4c06.stex  city_public.jpg-073c52a0ce1690be2fb6c362fc0db60a.md5  (+2 more)
RustCastInstance/: .gitignore  Cargo.toml  WorldData.gdns  WorldManager.gdns
RustCastInstance/src/: lib.rs
RustCheckProperties/: libgd_native_lib.gdnlib  main.tscn  project.godot  test_class.gdns
RustResultType/: Cargo.toml
RustTest/: .gitignore  Main.gd
SkyTest/: Main.gd  Main.tscn  default_env.tres  project.godot
TransformChecks/: main.tscn  object.gd
TransformMeshExamples/: example1.gd  example2.gd  main.tscn  material.tres
UiCoordinateSystems/: ControlDebugDraw.gd  Main.tscn  project.godot
UiEventProcessingPriorities1/: main.gd  main.tscn  project.godot  sub.gd
UiExperiment1/: main.tscn  project.godot
UiExperiment2/: main.tscn  project.godot
UiExperimentSkinning1/: font  font.tres  main.tscn  project.godot  theme.tres
UiItemList/: control.gd  itemlist_theme.tres  main.tscn  preview.tscn
UiTransitions1/: Main.tscn  VBoxContainer.gd  project.godot
ViewportExperiments1/: child.gd  fps.gd  main.gd  notes.md
ViewportExperiments2/: Child.tscn  child.gd  custom_viewport_container.gd  main.gd  project.godot
ViewportScreenReading/: .gitignore
WebTest/: .gitignore  Label.gd  Main.tscn  project.godot
_EmptyProject/: project.godot
_RustTemplate/: .gitignore  Cargo.toml  project.godot
_font/: Ubuntu-B.ttf.import  Ubuntu-BI.ttf.import  Ubuntu-C.ttf.import  Ubuntu-L.ttf.import  Ubuntu-LI.ttf.import  Ubuntu-M.ttf.import  Ubuntu-MI.ttf.import  Ubuntu-R.ttf.import  Ubuntu-RI.ttf.import  Ubuntu-Th.ttf.import  UbuntuMono-B.ttf.import  UbuntuMono-BI.ttf.import  UbuntuMono-R.ttf.import  UbuntuMono-RI.ttf.import
js_poly_tests/: .gitignore
line_drawing_2/: Main.tscn  MeshInstance2D.gd  Scaler.gd  line_shader.gdshader  line_shader.tres
src/: lib.rs
(+33 files in other folders)
