[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", rev = "780a62a5e82098571215e0b8cebc51cf50e47944", default-features = false, features = ["formatted", "codegen-full"] }
