[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdextension", rev = "3126f120e5169036233b593aac67abd52f75b652", default-features = false, features = ["formatted", "codegen-full"] }
# godot = { path = "/home/fabian/git/_ext/gdextension/godot", features = ["formatted", "codegen-full", "trace"] }
# godot = { path = "/home/fabian/git/_ext/gdextension/godot", features = ["formatted", "codegen-full"] }
