[package]
name = "gdext-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", rev = "2b6fce29d9a681517a697ccd4068641387fcfbb1", default-features = false, features = ["formatted", "codegen-full"] }
